# vala-toys

./: .gitignore  ChangeLog  INSTALL  LICENSING  MAINTAINERS  Makefile.am  NEWS  README  THANKS  TODO  autogen.sh  config.h.in  configure  configure.ac
afrodite/: Makefile.am  afroditetest  afroditetest.vala  ast.vala  astdumper.vala  astmerger.vala  codedom.vala  completionengine.vala  constants.vala  datatype.vala  ellipsistype.vala  libafrodite.pc.in  parser.vala  parseresult.vala  queryoptions.vala  queryresult.vala  resultitem.vala  sourcefile.vala  sourceitem.vala  sourcereference.vala  symbol.vala  symbolresolver.vala  utils.vala  voidtype.vala
afrodite/tests/: Makefile.am  completion-manager.vala  tests-basic-source.vala  tests-basic.vala  tests-integrity  tests-integrity.vala
build-aux/: git-version-gen
data/: Makefile.am  org.gnome.gedit.plugins.vala-toys.gschema.xml.in.in  vala-toys.convert
debian/: changelog  control  copyright  rules  vala-gen-project.install
doc/: Makefile.am
gen-project/: Makefile.am  genprojectdialog.vala  main.vala  tagcloud.vala  tagclouditem.vala  valagenprojectdialog.vala  valaprojectgenerator.vala
gen-project/libgen-project/: Makefile.am  constants.vala  projectgenerator.vala  projectoptions.vala  templatedefinition.vala  templates.vala  valaprojectgenerator.vala
gen-project/templates/: Makefile.am  gedit-3.0-plugin.ini  gtk+-2.0-vala-template.ini  gtk+-vala-template.ini  sharedlib-vala-template.ini
gen-project/templates/console-vala/: console-vala.ini
gen-project/templates/console-vala-template/: AUTHORS.template  MAINTAINERS.template  Makefile.am.template  autogen.sh.template  configure.ac.template
gen-project/templates/console-vala-template/src/: Makefile.am.template  main.vala  main.vala.template
gen-project/templates/gedit-2.20-plugin/: gedit-2.20-plugin.ini
gen-project/templates/gedit-2.20-plugin/template/: configure.ac.template
gen-project/templates/gedit-2.20-plugin/template/src/: Makefile.am.template  plugin.gedit-plugin  plugin.vala.template
gen-project/templates/gedit-3.0-plugin/template/: Makefile.am.template  configure.ac.template
gen-project/templates/gedit-3.0-plugin/template/po/: POTFILES.in
gen-project/templates/gedit-3.0-plugin/template/src/: Makefile.am.template  plugin.vala.template
gen-project/templates/gtk+-2.0-genie/: gtk+-2.0-genie.ini
gen-project/templates/gtk+-2.0-genie/template/: Makefile.am.template
gen-project/templates/gtk+-2.0-genie/template/po/: POTFILES.in
gen-project/templates/gtk+-2.0-genie/template/src/: Makefile.am.template  main.gs.template
gen-project/templates/gtk+-2.0-vala/template/src/: main.vala.template
gen-project/templates/gtk+-vala-template/: configure.ac.template
gen-project/templates/gtk+-vala-template/src/: Makefile.am.template
gen-project/templates/sharedlib-vala/: sharedlib-vala.ini
gen-project/templates/sharedlib-vala/template/src/: Makefile.am.template  main.vala.template
gen-project/ui/: Makefile.am  gen-project.ui
gsc-0.7.0/: Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
images/: Makefile.am
patches/: 2010-12-wip.patch  backup.patch  branch-standalone-edit.patch  from-vala-0-11-to-vala-0-10.patch  leaks-patch-approach1.patch  proper-proposal-filtering.patch  replace-sed-script  standalone-edit-work.patch  unowned-leaks.patch
po/: POTFILES.in  POTFILES.skip  es_AR.po  it.po  vtg.pot
ui/: Makefile.am  vtg.glade  vtg.ui
vala-patches/: add-content-param-sourcefile-construct.vala
vapi/: Makefile.am  config.vapi  gdkkeysyms-update.sh  gdkkeysyms.vapi  gedit-2.20.vapi  gedit-3.0.vapi  gnome-build-1.0.vapi  gtksourcecompletion-1.0.vapi  gtksourcecompletion-2.0.vapi  readline.vapi  reflection.vapi  utils.vapi
vbf/: Makefile.am  vbf-1.0.gir  vbf-1.0.vapi  vbfcodenodepair.vala  vbfconfignode.vala  vbfconfignodelist.vala  vbfconfignodepair.vala  vbfconstantliteral.vala  vbffile.vala  vbfgroup.vala  vbfiprojectbackend.vala  vbfiprojectmanager.vala  vbfmanager.vala  vbfmodule.vala  vbfpackage.vala  vbfproject.vala  vbfsource.vala  vbfstringliteral.vala  vbftarget.vala  vbftest.vala  vbfunresolvedconfignode.vala  vbfutils.vala  vbfvariable.vala
vbf/am/: vbfamprojectmanager.vala
vbf/backends/: vbfautotools.vala  vbfsmartfolder.vala
vsc/: Makefile.am  vscclasslistvisitor.vala  vsccompletionvisitor.vala  vscmethodlistvisitor.vala  vscparsermanager.vala  vscsourcebuffer.vala  vscsourceoutlinervisitor.vala  vscsymbolcompletion.vala  vscsymbolcompletionfilteroptions.vala  vscsymbolcompletionitem.vala  vscsymbolcompletionresult.vala  vscsymbolitem.vala  vsctypefindvisitor.vala
vsc-shell/: Makefile.am  vsccompletionshell.vala
vsc-shell/scripts/: test-1.script  test-1.vala  test-2-foobar.vala  test-2.script  test-2.vala
vsc-tests/: simple.script  simple.vala
vtg/: Makefile.am  vtg.gedit-plugin  vtgbracketcompletion.vala  vtgbuildlogview.vala  vtgchangelog.vala  vtgconfiguration.vala  vtgfilteredlistdialog.vala  vtgoutputview.vala  vtgparametersdialog.vala  vtgplugin.vala  vtgplugininstance.vala  vtgprocesswatchinfo.vala  vtgprojectbuilder.vala  vtgprojectdescriptor.vala  vtgprojectexecuter.vala  vtgprojectexecuterdialog.vala  vtgprojectmanager.vala  vtgprojectmanagerbuilder.vala  vtgprojectmanagerbuildlogview.vala  vtgprojectmanagerexecuter.vala  vtgprojectmanagerexecuterdialog.vala  vtgprojectmanagerfilteredlistdialog.vala  vtgprojectmanageroutputview.vala  vtgprojectmanagerpackagesdialog.vala  vtgprojectmanagerprocesswatchinfo.vala  vtgprojectmanagerproject.vala  vtgprojectmanagerprojectgroup.vala  vtgprojectmanagerprojectmodule.vala  vtgprojectmanagerprojectpackage.vala  vtgprojectmanagerprojectsource.vala  vtgprojectmanagerprojecttarget.vala  vtgprojectmanagerui.vala  vtgprojectmanagerview.vala  vtgprojects.vala  vtgprojectsearch.vala  vtgprojectsearchdialog.vala  vtgprojectsearchresultsview.vala  vtgprojectview.vala  vtgsourcebookmarks.vala  vtgsourceoutliner.vala  (+13 more)
vtg-0.11.1/: AUTHORS  COPYING  ChangeLog  ChangeLog.pre-2011  NEWS  README  THANKS  configure  configure.ac
(+38 files in other folders)
