# Plugin pixmap files
vtg_iconsdir = $(pkgdatadir)/images
vtg_icons_DATA = \
	element-literal-16.png \
	element-class-16.png \
	element-delegate-16.png \
	element-enumeration-16.png \
	element-event-16.png \
	element-field-16.png \
	element-interface-16.png \
	element-method-16.png \
	element-namespace-16.png \
	element-property-16.png \
	element-structure-16.png
EXTRA_DIST = $(vtg_icons_DATA)
