# Plugin pixmap files
vtg_iconsdir = $(pkgdatadir)/images
vtg_icons_DATA = \
	element-literal-16.png \
	element-class-16.png \
	element-delegate-16.png \
	element-enumeration-16.png \
	element-event-16.png \
	element-field-16.png \
	element-interface-16.png \
	element-method-16.png \
	element-namespace-16.png \
	element-property-16.png \
	element-structure-16.png \
	project-16.png \
	private-symbols-22.png \
	protected-symbols-22.png \
	internal-symbols-22.png \
	public-symbols-22.png \
	package-16.png \
	project-data-16.png \
	project-data-22.png \
	project-library-16.png \
	project-library-22.png \
	project-reference-folder-16.png \
	project-reference-package-16.png \
	project-unknown-16.png \
	project-unknown-22.png


EXTRA_DIST = $(vtg_icons_DATA)
